hphp/test/slow/unpack_args/unpack_call_ref.php.expectf

Fatal error: Unpacking unsupported for calls to functions that take any arguments by reference in %s/unpack_call_ref.php on line 75
